[package]
name = "pml-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
csv = "1.1.6"
anyhow = "1.0.38"
thiserror = "1.0.24"
chrono = "0.4.19"
strum = { version = "0.21", features = ["derive"] }
clap = { version = "3.1.12", features = ["derive"] }
